# buckshot-roulette-engine

./: .gitignore  CMakeLists.txt  README.md
include/: parameters.hpp  randomizer.hpp  string_functions.hpp
include/engine/: evaluator.hpp  game.hpp  game_parameters.hpp  interactive_game.hpp  state_machine.hpp
include/engine/agents/: agent.hpp  automatic_intelligent_agent.hpp  intelligent_agent.hpp  interactive_agent.hpp  interactive_intelligent_agent.hpp  randomized_agent.hpp
include/engine/item_drawers/: get_input_item_drawer.hpp  item_drawer.hpp  randomized_item_drawer.hpp
include/engine/objects/: handcuffs.hpp  magazine.hpp  participant.hpp  shotgun.hpp  state.hpp  types.hpp
include/search/: extended_search.hpp  iterative_search.hpp  search.hpp  threaded_search.hpp  transposition_search.hpp
src/: evaluator.cpp  game.cpp  interactive_game.cpp  main.cpp  simulation.cpp  state_machine.cpp  string_functions.cpp
src/agents/: automatic_intelligent_agent.cpp  intelligent_agent.cpp  interactive_agent.cpp  interactive_intelligent_agent.cpp  randomized_agent.cpp
src/item_drawers/: get_input_item_drawer.cpp  randomized_item_drawer.cpp
src/objects/: magazine.cpp  participant.cpp  shotgun.cpp  state.cpp
test/: expectiminimax_test.cpp  game_test.cpp  hash_test.cpp  performance_test.cpp
